# GActionSheet

./: .clasp.json  .gitignore  2026-06-05-Test-Review.md  CLAUDE.md  ContractSchema.json  OPERATIONS.md  PLAN-bd.md  README.md  REVIEW-2026-06-17.md  TEST-DEV-PLAN-2026-06-17.md  archive-test-results.py  commit-deploy-stamp.js  gas-inspect.js  local.settings.example.json  manage-deployments.js  manifest  package-lock.json  package.json  pipeline-report.md  pyproject.toml  session-cost-report.py  update-revision.js  webapp-proxy-poc.md  work-log.md  write-environment.py  x.sh
.auth/: README.md
.beads/: .gitignore  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
archive/: generate-pipeline-report.py
deployment-ledger/: dev.jsonl  production.jsonl  test.jsonl
doc-framework/: README.md  doc-bootstrap.md  doc-standard.md  planning-guide.md
docs/: CONTEXT.md  DESIGN.md  OPERATIONS.md  README.md  USER_GUIDE.md  context-transfer-2026-05-22.md  design-review-05-29.md  google-preview-with-smart-chips.md  poc-editor-addon-migration.md  proposed-atdd-lifecycle.md  security-architecture.md  session-review-2026-05-25.md  side-bar-mockup.html
knowledge-base/: ROADMAP.md  VISION.md
scn/: __init__.py  ai.py  assertions.py  contacts.py  contract.py  engine.py  reporter.py  session.py  surfaces.py  ui.py
scripts/: call_webapp.py  check_coverage.py  export-contract.js  orchestrate_test_review.py  query_axiom.py  run_test_exec.py  trace_report.py
src/: Addon.js  ArchiveManager.js  AtddContracts.js  Constants.js  ContractSchema.js  DocumentDiscovery.js  PROBE.js  (+24 more)
(+193 files in other folders)
