[project]
name = "gtasksheet-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "requests>=2.31",
    "openpyxl>=3.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
# Required for scn/ui.py live-browser integration tests; not needed for unit tests.
# Install with: uv pip install -e ".[ui]"
ui = ["playwright>=1.49"]

[tool.pytest.ini_options]
testpaths = ["tests"]
