[project]
name = "gtasksheet-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "requests>=2.31",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "allure-pytest>=2.13",
]

[project.optional-dependencies]
# Required for scn/ui.py live-browser integration tests; not needed for unit tests.
# Install with: uv pip install -e ".[ui]"
ui = ["playwright>=1.49"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--alluredir=test-results/allure-results --junitxml=test-results/junit/pytest.xml -m 'not interactive'"
markers = [
    "smoke: fast (<1 min) high-risk UI-surface scenario (GTaskSheet-80mo.17)",
    "interactive: headed, human-instructed test for UI interactions Playwright cannot drive (GTaskSheet-15e8, epic GTaskSheet-pw5x); excluded from the default run via -m 'not interactive' — run explicitly with: pytest -m interactive tests/test_interactive.py -s",
]
